--- a/lib/generators/field_test/templates/memberships.rb.tt
+++ b/lib/generators/field_test/templates/memberships.rb.tt
@@ -7,6 +7,7 @@ class <%= migration_class_name %> < ActiveRecord::Migration<%= migration_version
       t.string :variant
       t.datetime :created_at
       t.boolean :converted, default: false
+      t.json :properties, default: {}, null: false
     end
 
     add_index :field_test_memberships, [:participant_type, :participant_id, :experiment],
